Fix gap of the navbar links

--- a/css/main.scss
+++ b/css/main.scss
@@ -23,6 +23,10 @@ body {
   align-items: center;
 }
 
+.navbar-links {
+  gap: 10px;
+}
+
 .primaryBtn-product {
   $btnPadding: 24px 68px 24px 48px;
   @include primaryBtn(363px, $btnPadding, 32px, 32px);
@@ -60,10 +64,16 @@ body {
       margin-right: #{calc($rightMargin/2)}px;
     }
   }
+
+  .navbar-links {
+    gap: 56px;
+  }
+
   .primaryBtn-product {
     $btnPadding: 24px 98px 24px 48px;
     @include primaryBtn(363px, $btnPadding, 32px, 32px);
   }
+
   .primaryBtn-arrow-icon {
     right: 48px;
   }
@@ -87,8 +97,13 @@ body {
       margin-right: #{$rightMargin}px;
     }
   }
+
   body {
     padding: 32px 80px 0;
+  }
+
+  .navbar-links {
+    gap: 56px;
   }
 
   .hero-text {
